--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@firebase/analytics": "^0.10.0",
+		"@firebase/app": "^0.9.19",
+		"@firebase/database": "^1.0.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
